2006-05-02  James Turner  <james@worldforge.org>

	* Eris/Task.h: fix name() to return by reference, as intended; thanks
	  Erik.

	* test/viewTest.h, test/viewTest.cpp: add basic task test
	
	* test/testOutOfGame.cpp, test/testOutOfGame.h: add test for duplicate
	  account creation.
	  
	* test/testCalendar.cpp: add crude calendar code test

2006-05-01  James Turner  <james@worldforge.org>

	* Eris/EntityRef.h: add equality and ordering operators.

2006-04-30  James Turner  <james@worldforge.org>

	* Eris/Task.h, Eris/Task.cpp: when a task is deleted, force it to be
	  removed from the prediction set.

2006-04-28  James Turner  <james@worldforge.org>

	* Eris/Task.h: missing newline at end of file for Loooooooonix.

2006-04-28  James Turner  <james@worldforge.org>

	* Eris/Task.cpp, Eris/Task.h: add in initial work on exposing Tasks to
	  clients.
	  
	* Eris/View.h, Eris/View.cpp: for tasks with a defined progress rate,
	  predict their progress during View::update(), as is already done for
	  position prediction.
	  
	* Eris/Entity.cpp, Eris/Entity.h: process the 'tasks' atteribute if 
	  present, and make an array of Task*s available on Entity.

2006-04-26  James Turner  <james@worldforge.org>

	* Eris/Avatar.cpp, Eris/Avatar.h: add ::useStop(), a helper to send an
	  empty use operation, signifying that the current task should be halted.

2006-02-16  Simon Goodall  <simon@simongoodall.co.uk>

	* Eris/Calendar.h: Export secondsPerMinute();

2006-01-29  James Turner  <james@worldforge.org>

	* Eris/Connection.cpp: catch Atlas exceptions which occur during dispatch,
	  and emit an Eris error.
	  
	* Eris/Account.cpp: silence a warning when clients retrieve an incomplete
	  character dictionary from the account.

2006-01-21  James Turner  <james@worldforge.org>

	* Eris/IGRouter.cpp: warn if a sight(action) is received with no FROM set,
	  instead of silently ignoring this case.

2006-01-18  James Turner  <james@worldforge.org>
